--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -123,7 +123,7 @@
             var host = [[${serverPath}]];
         /*]]>*/
         if (action == 'uploadimage' || action == 'uploadscrawl' || action == 'uploadimage') {
-            return host + '/ueditor/imgUpload';
+            return host + 'ueditor/imgUpload';
         } else {
             return this._bkGetActionUrl.call(this, action);
         }
