--- a/src/main/resources/templates/memberDetail.html
+++ b/src/main/resources/templates/memberDetail.html
@@ -32,6 +32,12 @@
             text-align: right;
         }
 
+        .tableTitleCenter {
+            font-size: 11px;
+            font-family: inherit;
+            text-align: center;
+        }
+
         .tableContent {
             font-size: 11px;
             font-family: inherit;
@@ -138,67 +144,43 @@
                                         <table class="table table-bordered" style="word-break:break-all; word-wrap:break-all;">
                                             <thead>
                                             <tr>
-                                                <th>序号</th>
-                                                <th>积分项目</th>
-                                                <th>分数</th>
+                                                <th class="tableTitleCenter">序号</th>
+                                                <th class="tableTitleCenter">积分项目</th>
+                                                <th class="tableTitleCenter">分数</th>
                                             </tr>
                                             </thead>
                                             <tbody>
                                             <tr th:each="integration,stat : ${integrations}">
-                                                <td width="10%" th:text="${stat.index}"></td>
-                                                <td width="80%" th:text="${integration.content}"></td>
-                                                <td width="10%" th:text="${integration.score}"></td>
+                                                <td width="15%" class="tableContent" th:text="${stat.index}"></td>
+                                                <td width="70%" class="tableContent" th:text="${integration.content}"></td>
+                                                <td width="15%" class="tableContent" th:text="${integration.score}"></td>
                                             </tr>
                                             </tbody>
                                         </table>
                                     </div>
                                 </div>
                                 <div class="tab-pane p-20" id="messages8" role="tabpanel">
+
+                                </div>
+                                <div class="tab-pane p-20" id="messages9" role="tabpanel"></div>
+                                <div class="tab-pane p-20" id="messages10" role="tabpanel">
                                     <table class="table table-bordered" style="word-break:break-all; word-wrap:break-all;">
                                         <thead>
                                         <tr>
-                                            <th>序号</th>
-                                            <th>积分项目</th>
-                                            <th>分数</th>
+                                            <th class="tableTitleCenter">序号</th>
+                                            <th class="tableTitleCenter">活动时间</th>
+                                            <th class="tableTitleCenter">活动名称</th>
                                         </tr>
                                         </thead>
                                         <tbody>
-                                        <tr th:each="integration,stat : ${integrations}">
-                                            <td width="10%" th:text="${stat.index}"></td>
-                                            <td width="80%" th:text="${integration.content}"></td>
-                                            <td width="10%" th:text="${integration.score}"></td>
+                                        <tr th:each="activity,stat : ${activities}">
+                                            <td width="15%" class="tableContent" th:text="${stat.index}"></td>
+                                            <td width="25%" class="tableContent" th:inline="text">[[${activity.yearNo}]]-[[${activity.period}]]</td>
+                                            <td width="60%" class="tableContent" th:text="${activity.name}"></td>
                                         </tr>
                                         </tbody>
                                     </table>
-                                    <div class="table-responsive">
-                                        <table class="table" style="word-break:break-all; word-wrap:break-all;">
-                                            <tr>
-                                                <td></td>
-                                            </tr>
-                                            <tr>
-                                                <th scope="row">3</th>
-                                                <td>Blue Backpack For Baby</td>
-                                                <td><span class="badge badge-danger">Extended</span></td>
-                                                <td>January 25</td>
-                                                <td class="color-danger">$14.85</td>
-                                            </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                    <pre>
-                                        一、政治好
-                                        1、理想信念坚定，对党忠诚，不信谣、不传谣，不发表有损党的形象的言论。符合基本要求记10分。
-                                        2、积极参加社区党组织开展的支部主题党日、三会一课、学习培训等活动。流动党员通过手机、微信、QQ等方式与党组织联系的，全年累计不超过12分
-                                        3、每月按时、足额交纳党费。按月、足额交纳党费每次记1分，全年累计不超过12分
-                                        二、纪律好
-                                        4、带头支持社区“两委”班子工作，带头执行社区党组织决议和决定。符合基本要求的记8分。
-                                        5、带头遵守法律法规和社区公约，为人公道正派，诚实守信。全年未参与非法、越级上访，群体性事件或违反计划生育政策、偷税漏税、违章建房等违法违规行为，符合基本要求的记5分。
-                                        6、带头参加政策宣传解释工作。参加一次活动（发放宣传资料、政策宣讲）记1分
-                                        7、带头参与社会治安综合治理，敢于正面直言，带头参加社区矛盾调解，敢于同违法行为作斗争。主动举报或能积极疏导制止身边违法违规行为的，一次记2分，全年累计不超过10分。
-                                    </pre>
                                 </div>
-                                <div class="tab-pane p-20" id="messages9" role="tabpanel"></div>
-                                <div class="tab-pane p-20" id="messages10" role="tabpanel">3</div>
                             </div>
                         </div>
                     </div>
@@ -218,8 +200,10 @@
     $(function () {
         /*<![CDATA[*/
         var detail = [[${orgDetail}]];
+        var content = [[${content}]];
         /*]]>*/
         $("#messages9").html(detail);
+        $("#messages8").html(content);
     });
 </script>
 </body>
