--- a/src/main/resources/templates/org.html
+++ b/src/main/resources/templates/org.html
@@ -45,7 +45,7 @@
                                         <div class="form-group row">
                                             <label class="control-label text-right col-md-3">机构简称</label>
                                             <div class="col-md-9">
-                                                <input type="text" id="shortname" name="shortname" class="form-control form-control-danger" required>
+                                                <input type="text" id="shortname" name="shortname" class="form-control form-control-danger">
                                             </div>
                                         </div>
                                     </div>
@@ -61,12 +61,21 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-6">
+                                    <!--<div class="col-md-6">
                                         <div class="form-group row">
                                             <label class="control-label text-right col-md-3">机构代码</label>
                                             <div class="col-md-9">
                                                 <input type="text" id="code" name="code"
                                                        class="form-control form-control-danger" required>
+                                            </div>
+                                        </div>
+                                    </div>-->
+                                    <div class="col-md-6">
+                                        <div class="form-group row">
+                                            <label class="control-label text-right col-md-3">负责人</label>
+                                            <div class="col-md-9">
+                                                <input type="text" id="managerName" name="managerName"
+                                                       class="form-control">
                                             </div>
                                         </div>
                                     </div>
@@ -77,7 +86,7 @@
                                             <label class="control-label text-right col-md-3">详细地址</label>
                                             <div class="col-md-9">
                                                 <input type="text" id="addressDetail" name="addressDetail"
-                                                       class="form-control" required>
+                                                       class="form-control">
                                             </div>
                                         </div>
                                     </div>
@@ -91,29 +100,21 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="form-group row">
-                                            <label class="control-label text-right col-md-3">负责人</label>
-                                            <div class="col-md-9">
-                                                <input type="text" id="managerName" name="managerName"
-                                                       class="form-control">
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="form-group row">
-                                            <label class="control-label text-right col-md-3">机构状态</label>
-                                            <div class="col-md-9">
-                                                <select id="status" name="status" class="form-control custom-select" required>
-                                                    <option>--选择状态--</option>
-                                                    <option value="1">启用</option>
-                                                    <option value="0">禁用</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                                <!-- <div class="row">
+
+                                     <div class="col-md-6">
+                                         <div class="form-group row">
+                                             <label class="control-label text-right col-md-3">机构状态</label>
+                                             <div class="col-md-9">
+                                                 <select id="status" name="status" class="form-control custom-select" required>
+                                                     <option>&#45;&#45;选择状态&#45;&#45;</option>
+                                                     <option value="1">启用</option>
+                                                     <option value="0">禁用</option>
+                                                 </select>
+                                             </div>
+                                         </div>
+                                     </div>
+                                </div>-->
                             </div>
                             <hr>
                             <div class="form-actions">
@@ -195,10 +196,14 @@
                 alert("删除选择错误");
                 return;
             }
-            Core.ajaxGet("system/org/delete?orgId=" + nodes[0].id,function () {
-                alert("操作成功");
-                loadTree();
-                $("#orgForm").resetForm();
+            Core.ajaxGet("system/org/delete?orgId=" + nodes[0].id,function (result) {
+                if(result != null && result.code == 1){
+                    Core.toastrSuccess("删除成功");
+                    loadTree();
+                    $("#orgForm").resetForm();
+                } else {
+                    Core.toastrError(result.message);
+                }
             });
         });
     });
